16.8
-----
* [**] Prevent deleting published homepages which would have the effect of breaking a site. [#15797]
* [**] Prevent converting published homepage to a draft in the page list and settings which would have the effect of breaking a site. [#15797]
* [*] Quick Start: Completing a step outside of a tour now automatically marks it as complete. [#15712]

16.7
-----
* [**] Site Creation: Adds the option to choose between mobile, tablet or desktop thumbnails and previews in the home page design picker when creating a WordPress.com site [https://github.com/wordpress-mobile/WordPress-iOS/pull/15688]
* [*] Block Editor: Fix issue with uploading media after exiting the editor multiple times [https://github.com/wordpress-mobile/WordPress-iOS/pull/15656].
* [**] Site Creation: Enables dot blog subdomains for each site design. [#15736]
* [**] Reader post card and post details: added ability to mark a followed post as seen/unseen. [#15638, #15645, #15676]
* [**] Reader site filter: show unseen post count. [#15581]
* [***] Block Editor: New Block: Audio [https://github.com/wordpress-mobile/gutenberg-mobile/pull/2854, https://github.com/wordpress-mobile/gutenberg-mobile/pull/3070]
* [**] Block Editor: Add support for setting heading anchors [https://github.com/wordpress-mobile/gutenberg-mobile/pull/2947]
* [**] Block Editor: Disable Unsupported Block Editor for Reusable blocks [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3067]
* [**] Block Editor: Add proper handling for single use blocks such as the more block [https://github.com/wordpress-mobile/gutenberg-mobile/pull/3042]
* [*] Reader post options: fixed an issue where the options in post details did not match those on post cards. [#15778]
* [***] iOS 14 Widgets: new All Time Widgets to display All Time Stats in your home screen. [#15771, #15794]